--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Yew App</title>
+        <title>Bandsaw</title>
 
         <link data-trunk rel="rust" />
         <link data-trunk rel="scss" href="styles.scss" />
